refactor(Core): Unify model conversion, streamline dependencies, and add metrics
This major refactoring improves the project's robustness, maintainability, and observability.

Key Changes:

-   **Replaced Model Converter:** Switched from a fragile `Optimum-Intel` script to the official and robust `ct2-transformers-converter` tool via a Python wrapper. This ensures consistency between the converted model format and the inference engine.
-   **Unified Dependencies:** Eliminated `requirements.gpu.txt` and consolidated all Python dependencies into a single `requirements.txt`. The GPU-specific version of `ctranslate2` is now handled directly within the `Dockerfile.gpu`.
-   **Added LLM Metrics:** Introduced custom Prometheus metrics (`generated_tokens_total`, `inference_latency_seconds`) to the `LLMEngine` for better performance monitoring and observability.
-   **Streamlined Dockerfiles:** Refactored `Dockerfile.gpu` to use NVIDIA's official CUDA base images for better compatibility. Updated `Dockerfile.converter` to use the new conversion script.
-   **Updated Documentation:** The README file has been updated to reflect the new, more reliable CTranslate2-based conversion process.

--- a/Dockerfile.converter
+++ b/Dockerfile.converter
@@ -1,19 +1,17 @@
 FROM python:3.11-slim-bookworm
 
+# Gerekli sistem bağımlılıkları
+RUN apt-get update && apt-get install -y --no-install-recommends build-essential git && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
-# MODERN VE UYUMLU KÜTÜPHANELERİ, TÜM ÇEKİRDEK BAĞIMLILIKLARIYLA BİRLİKTE KUR
-# 'openvino', 'optimum[intel]' kütüphanesinin çalışması için zorunludur.
-RUN pip install --no-cache-dir \
-    "optimum[intel]>=1.16.0" \
-    "openvino>=2023.3.0" \
-    "transformers>=4.40.0" \
-    "huggingface-hub>=0.20.0" \
-    "torch>=2.0.0" \
-    "accelerate>=0.25.0" --extra-index-url https://download.pytorch.org/whl/cpu
+# --- DEĞİŞİKLİK: Sadece converter'a özel requirements dosyasını kopyala ---
+COPY requirements.converter.txt .
 
-# Kütüphaneler kurulduktan sonra betiği kopyala
+# --- DEĞİŞİKLİK: Yeni dosyayı kullanarak bağımlılıkları kur ---
+RUN pip install --no-cache-dir -r requirements.converter.txt
+
 COPY ./scripts/convert_model.py .
-
-# Container çalıştığında doğrudan betiği çalıştır
-CMD ["python", "convert_model.py"]
+RUN mkdir /models
+ENTRYPOINT ["python", "convert_model.py"]
