--- a/docker-compose.cpu.yml
+++ b/docker-compose.cpu.yml
@@ -4,15 +4,11 @@ services:
       context: .
       dockerfile: Dockerfile.converter
     environment:
-      # Sadece standart ortam değişkenlerini kullanıyoruz
-      - LLM_LOCAL_SERVICE_MODEL_NAME=${LLM_LOCAL_SERVICE_MODEL_NAME:-microsoft/Phi-3-mini-4k-instruct}
-      - LLM_LOCAL_SERVICE_DEVICE=cpu
-      # Diğer yardımcı değişkenler
-      - HF_HUB_ENABLE_HF_TRANSFER=0
-      - TRANSFORMERS_VERBOSITY=info      
+      # --- DEĞİŞİKLİK BURADA ---
+      - LLM_LOCAL_SERVICE_MODEL_NAME=${LLM_LOCAL_SERVICE_MODEL_NAME:-microsoft/Phi-3-mini-4k-instructs}
+      - LLM_LOCAL_SERVICE_COMPUTE_TYPE=int8 # CPU için int8 quantizasyon idealdir
     volumes:
       - llm_model_cache:/models
-    # Bu servis işini yapıp çıkacak, port açmasına gerek yok.        
 
   llm-local-service-cpu:
     build:
@@ -23,6 +19,8 @@ services:
       - ENV=development
       - LOG_LEVEL=debug
       - LLM_LOCAL_SERVICE_DEVICE=cpu
+      - LLM_LOCAL_SERVICE_COMPUTE_TYPE=int8 
+      # --- DEĞİŞİKLİK BURADA ---
       - LLM_LOCAL_SERVICE_MODEL_NAME=${LLM_LOCAL_SERVICE_MODEL_NAME:-microsoft/Phi-3-mini-4k-instruct}
     volumes: 
       - llm_model_cache:/app/model-cache
