feat(engine)!: Overhaul inference backend to a hybrid vLLM (GPU) and Transformers (CPU) engine
BREAKING CHANGE: The entire inference architecture has been fundamentally refactored. The initial CTranslate2-based engine is replaced with a more robust, flexible, and industry-standard hybrid approach to ensure stability and performance across different hardware environments.

This migration addresses persistent build failures, local resource limitations (OOM errors), and library incompatibilities encountered during the development lifecycle.

**New Architecture:**

-   **GPU Backend (`vLLM`):** For CUDA-enabled environments, the service now leverages `vllm` as the core inference engine.
    -   It utilizes `AWQ` quantization by default (`TheBloke/Phi-3-mini-4k-instruct-AWQ`) to run efficiently on GPUs with limited VRAM (~6GB).
    -   This provides state-of-the-art performance, high throughput, and support for the latest model architectures without a complex local conversion step.

-   **CPU Backend (`transformers`):** For CPU-only environments, the service now uses the standard Hugging Face `transformers` library as a stable fallback.
    -   This ensures broad compatibility and reliable operation, removing the dependency on `vLLM`'s experimental CPU support.

-   **Hybrid Engine (`LLMEngine`):** The `LLMEngine` class has been re-engineered to be "device-aware". It automatically detects the available hardware (`cuda` or `cpu`) and initializes the appropriate backend, making the service seamlessly adaptable.

**Key Improvements & Fixes:**

-   **Eliminated Conversion Step:** The entire `llm-model-converter` service, its dependencies (`torch` in a separate container), and related scripts have been removed, drastically simplifying the architecture and build process.
-   **Resolved OOM Errors:** The switch to pre-quantized `AWQ` models for GPU and direct loading for CPU resolves all memory-related crashes.
-   **Fixed Build Failures:** All complex build issues related to `

--- a/docker-compose.cpu.yml
+++ b/docker-compose.cpu.yml
@@ -1,43 +1,33 @@
 services:
-  llm-model-converter:
-    build:
-      context: .
-      dockerfile: Dockerfile.converter
-    environment:
-      # --- DEĞİŞİKLİK BURADA ---
-      - LLM_LOCAL_SERVICE_MODEL_NAME=${LLM_LOCAL_SERVICE_MODEL_NAME:-microsoft/Phi-3-mini-4k-instruct}
-      - LLM_LOCAL_SERVICE_COMPUTE_TYPE=int8 # CPU için int8 quantizasyon idealdir
-    volumes:
-      - llm_model_cache:/models
-
   llm-local-service-cpu:
     build:
       context: .
+      # CPU için olan Dockerfile'ı kullanıyoruz
       dockerfile: Dockerfile
     container_name: llm-local-service-cpu
     environment:
-      - ENV=development
-      - LOG_LEVEL=debug
+      # Modeli Phi-4 olarak ayarlıyoruz
+      - LLM_LOCAL_SERVICE_MODEL_NAME=microsoft/Phi-3-mini-4k-instruct
+      # Motora CPU'da çalışmasını söylüyoruz
       - LLM_LOCAL_SERVICE_DEVICE=cpu
-      - LLM_LOCAL_SERVICE_COMPUTE_TYPE=int8 
-      # --- DEĞİŞİKLİK BURADA ---
-      - LLM_LOCAL_SERVICE_MODEL_NAME=${LLM_LOCAL_SERVICE_MODEL_NAME:-microsoft/Phi-3-mini-4k-instruct}
+      - LOG_LEVEL=info
     volumes: 
+      # Modellerin indirileceği ve kalıcı olacağı yerler
       - llm_model_cache:/app/model-cache
+      - llm_hf_cache:/root/.cache/huggingface
     ports: 
       - "16060:16060" # HTTP Health
       - "16061:16061" # gRPC
       - "16062:16062" # Prometheus Metrics
     restart: unless-stopped
-    depends_on:
-      llm-model-converter:
-        condition: service_completed_successfully
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:16060/health"]
       interval: 30s
-      timeout: 10s
+      timeout: 20s
       retries: 5
-      start_period: 15s
+      # Modelin indirilip CPU'da yüklenmesi çok uzun sürebilir, bu yüzden süreyi cömert tutuyoruz
+      start_period: 25m
 
 volumes:
   llm_model_cache:
+  llm_hf_cache:
