--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -1,67 +1,20 @@
-# STAGE 1: Builder
-# Bu katman, tüm bağımlılıkları derlemek için gereken her şeyi içerir.
-FROM nvidia/cuda:12.1.1-devel-ubuntu22.04 AS builder
-
-# --- DÜZELTME: Gerekli TÜM sistem ve Python geliştirme bağımlılıklarını TEK SEFERDE kuruyoruz ---
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
-    git \
-    python3.11 \
-    python3.11-dev \
-    python3-pip \
-    && apt-get clean && rm -rf /var/lib/apt/lists/* \
-    && ln -s /usr/bin/python3.11 /usr/bin/python
-
-WORKDIR /wheelhouse
-COPY requirements.txt .
-
-# flash-attn'in derlenmesi için GEREKLİ TÜM build-time Python paketlerini kuruyoruz
-RUN python3.11 -m pip install --no-cache-dir packaging torch
-
-# Flash Attention'ı kuruyoruz (artık python3.11-dev kurulu olduğu için çalışacak)
-RUN python3.11 -m pip install --no-cache-dir flash-attn --no-build-isolation
-
-# CTranslate2 ve diğer tüm runtime bağımlılıklarını wheel olarak hazırlıyoruz
-RUN python3.11 -m pip install --no-cache-dir wheel && \
-    sed -i 's/^ctranslate2==.*$/ctranslate2[cuda]==4.6.0/' requirements.txt && \
-    python3.11 -m pip wheel --no-cache-dir -r requirements.txt
-
-# STAGE 2: Final
-# Bu son katman, SADECE çalışma zamanı için gerekenleri içerir, torch'u veya dev paketlerini DEĞİL.
-FROM nvidia/cuda:12.1.1-base-ubuntu22.04
-
-ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1 \
-    HF_HOME=/app/model-cache \
-    PATH="/opt/venv/bin:$PATH"
+FROM vllm/vllm-openai:latest
 
 WORKDIR /app
 
-# Sadece runtime için gereken sistem paketleri
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3.11 \
-    python3.11-venv \
-    curl \
-    && apt-get clean && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends git && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
-RUN python3.11 -m venv /opt/venv
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-# torch ve dev bağımlılıklarını hariç tutarak sadece gereken .whl dosyalarını kopyalıyoruz
-COPY --from=builder /wheelhouse /wheelhouse
-RUN find /wheelhouse -name "*torch*" -type f -delete && \
-    /opt/venv/bin/pip install --no-cache-dir /wheelhouse/*.whl && \
-    rm -rf /wheelhouse /root/.cache/pip
+# --- DÜZELTME: Protobuf versiyonunu manuel olarak yükseltiyoruz ---
+RUN pip install --no-cache-dir --upgrade protobuf
 
-RUN addgroup --system --gid 1001 appgroup && \
-    adduser --system --no-create-home --uid 1001 --ingroup appgroup appuser
-
-COPY --chown=appuser:appgroup ./app ./app
-RUN mkdir -p /app/model-cache && chown -R appuser:appgroup /app/model-cache
-
-USER appuser
-
-HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD curl -f http://localhost:16060/health || exit 1
+COPY ./app ./app
+COPY grpc_test_client.py .
+COPY pyproject.toml .
 
 EXPOSE 16060 16061 16062
-CMD ["python", "-m", "app.runner"]
+ENTRYPOINT []
+CMD ["python3", "-m", "app.runner"]
